# MyEyes

./: AppStateChart.scxml  CMakeLists.txt  LICENSE  MyEyes.pro  MyEyes.pro.user.a205cad  MyEyes.pro.user.ccfa7e9  README.md  commons.h  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  setposition_window.cpp  setposition_window.h  setposition_window.ui  userRecognizer_thread.cpp  userRecognizer_thread.h  userRecognizer_window.ui  user_commons.h  user_debug.h  usercomm.cpp  usercomm.h  userrecognizer_thread.cpp  userrecognizer_thread.h  userrecognizer_window.cpp  userrecognizer_window.h  usertracking.cpp  usertracking.h  usertracking_thread.cpp  usertracking_thread.h  util.cpp  util.h
